Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %>
   <br />
   <%= f.label :artist %>
-  <%= f.text_field '[:song][:artist]'
+  <%= f.text_field 'song[:artist]'
   <%= f.submit %>
 <% end %>
 
