--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.label :title %>
   <%= f.text_field :title %>
   <br />
-  <%= f.label :song_artist %>
+  <%= f.label :song_artist_name %>
   <%= f.text_field :artist %>
   <%= f.submit %>
 <% end %>
