--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -5,7 +5,7 @@
   <%= f.text_field :title %>
   <br />
   <%= f.label :song_artist_name %>
-  <%= f.text_field :artist %>
+  <%= f.text_field "song:artist" %>
   <%= f.submit %>
 <% end %>
 
