--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -1,12 +1,9 @@
 <h1>Create a Song</h1>
 
-<%= form_for @song  do |f| %>
+<%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <br />
-  <%= f.label :song_artist_name %>
-  <%= f.text_field "song:artist" %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
   <%= f.submit %>
 <% end %>
-
-
