--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,7 +6,14 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.label :genre_name %>
-  <%= f.collection_select :genre_name, Genre.all, :name, :name %>
+  <%= f.text_field :genre_name, list: "genres_autocomplete" %>
+    <datalist id="genres_autocomplete">
+      <% Genre.all.each do |genre| %>
+        <option value="<%= genre.name %>" ></option>
+      <% end %>  
+    </datalist>
+  
+  
   <%= f.submit %>
 <% end %>
 
