--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,8 +6,8 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.label :genre_name %>
-  <%= f.text_field :genre_name, list: "genres_autocomplete" %>
-    <datalist id="genres_autocomplete">
+  <%= f.text_field :genre_name, list: "song_genre_id" %>
+    <datalist id="song_genre_id">
       <% Genre.all.each do |genre| %>
         <option value="<%= genre.name %>" ></option>
       <% end %>  
