--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -3,8 +3,8 @@
 <%= form_for @song do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %>
-  <%= f.label :artist_id %>
-  <%= f.text_field :artist_id %>
+  <%= f.label :artist_name %>
+  <%= f.text_field :artist_name %>
   <%= f.label :genre_id %>
   <%= f.text_field :genre_id, list: "song_genre_id" %>
     <datalist id="song_genre_id">
