Automatically backed up by Learn

--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -17,3 +17,9 @@
   <%= f.submit %>
 <% end %>
 
+<%= form_for @category do |f| %>
+  <input name="category[post_ids][]">
+  <input name="category[post_ids][]">
+  <input name="category[post_ids][]">
+  <input type="submit" value="Submit">
+<% end %>
