--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -12,7 +12,7 @@
         <option value="<%= genre.name %>" ></option>
       <% end %>  
     </datalist>
- 
+   <%= f.text_field "song[notes_ids][]" %>
   
   <%= f.submit %>
 <% end %>
