--- a/app/views/songs/new.html.erb
+++ b/app/views/songs/new.html.erb
@@ -6,14 +6,11 @@
   <%= f.label :artist_name %>
   <%= f.text_field :artist_name %>
   <%= f.label :genre_name %>
-  <%= f.text_field :genre_name, list: "genre_id" %>
-    <datalist id="genre_id">
-      <% Genre.all.each do |genre| %>
-        <option value="<%= genre.name %>" ></option>
-      <% end %>  
-    </datalist>
-   <%= f.text_field "song[notes_ids][]" %>
-  
+  <%= f.collection_select :genre_id, Genre.all, :id, :name %>
+  <input name='song[note_contents][]' id='song_notes_1'>
+  <input name='song[note_contents][]' id='song_notes_2'>
+  <input name='song[note_contents][]' id='song_notes_3'>
+    
   <%= f.submit %>
 <% end %>
 
